# test_task_sql

./: .gitignore  README.md  docker-compose.yml
api/: Dockerfile  app.py  pyproject.toml
database/: Dockerfile  init.sql
